--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,74 +1,78 @@
 <header>
-  <%= link_to(root_path, class: "logo-header") do %>
-    <%= image_tag "logo-beta.svg", alt: "", class: "home-index" %>
-    <p class="name-header">Omniscient <br>
-      Design</p>
-  <% end %>
-  <nav class="nav-header">
-    <ul>
-      <li>
-        <%= link_to(root_path, class: (@current_page == 'accueil' ? 'active' : '')) do %>
-          <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_3256_104)">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M18 0C27.9345 0 36 8.0655 36 18C36 27.9345 27.9345 36 18 36C8.0655 36 0 27.9345 0 18C0 8.0655 8.0655 0 18 0ZM20.214 22.4325C21.696 21.825 22.8495 20.616 23.388 19.1085L27 9L16.992 12.5805C15.483 13.1205 14.2755 14.277 13.668 15.759L9.0705 27L20.214 22.4325ZM20.031 16.0035C20.8575 16.83 20.8575 18.1725 20.031 18.9975C19.2045 19.824 17.8635 19.824 17.037 18.9975C16.2105 18.1725 16.2105 16.83 17.037 16.0035C17.8635 15.177 19.2045 15.177 20.031 16.0035Z" fill="#52525D"/>
-            </g>
-          </svg>
-          Explorer
-        <% end %>
-      </li>
-      <li>
-        <%= link_to search_path, class: (@current_page == 'recherche' ? 'active' : '') do %>
-          <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M35.7135 32.469L26.406 23.1615C28.1565 20.754 29.1915 17.793 29.1915 14.595C29.1915 6.5475 22.644 0 14.595 0C6.5475 0 0 6.5475 0 14.595C0 22.644 6.5475 29.19 14.595 29.19C17.646 29.19 20.4795 28.2495 22.8255 26.643L32.1825 36L35.7135 32.469ZM4.281 14.595C4.281 8.907 8.9085 4.2795 14.5965 4.2795C20.2845 4.2795 24.912 8.907 24.912 14.595C24.912 20.283 20.2845 24.9105 14.5965 24.9105C8.907 24.9105 4.281 20.283 4.281 14.595Z" fill="#52525D"/>
-          </svg>
-          Rechercher
-        <% end %>
-      </li>
-      <%# <li class="disabled">
-        <a>
-          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path opacity="0.4" d="M21.7222 9.42977V9.73291C20.9095 9.71695 20.0969 9.71695 19.2843 9.71695V9.44572C19.2843 8.34484 18.3579 7.45138 17.2527 7.45138H15.6438C13.8072 7.45138 12.312 5.98354 12.312 4.19661C12.312 3.54246 12.8646 3 13.5309 3C14.2135 3 14.7499 3.54246 14.7499 4.19661C14.7499 4.67525 15.1562 5.05816 15.6438 5.05816H17.2527C19.7069 5.07412 21.7059 7.03655 21.7222 9.42977Z" fill="#52525D"/>
-            <path d="M19.2849 9.7168C20.0975 9.7168 20.9101 9.7168 21.7228 9.73275C23.2667 9.73275 24.8107 9.76466 26.371 9.78062C32.0105 9.78062 36.1224 13.8012 36.1224 19.3535V26.4852C36.1224 32.0375 32.0105 36.0581 26.371 36.0581C24.1119 36.106 21.8528 36.1219 19.5775 36.1219C17.3021 36.1219 15.0105 36.106 12.7514 36.0581C7.11186 36.0581 3 32.0375 3 26.4852V19.3535C3 13.8012 7.11186 9.78062 12.7677 9.78062C14.8968 9.74871 17.0746 9.7168 19.2849 9.7168ZM14.7342 18.8429C14.0516 18.8429 13.5153 19.3854 13.5153 20.0395V21.7148H11.7926C11.1262 21.7148 10.5736 22.2572 10.5736 22.9114C10.5736 23.5815 11.1262 24.108 11.7926 24.108H13.5153V25.7992C13.5153 26.4533 14.0516 26.9958 14.7342 26.9958C15.4006 26.9958 15.9532 26.4533 15.9532 25.7992V24.108H17.6597C18.326 24.108 18.8786 23.5815 18.8786 22.9114C18.8786 22.2572 18.326 21.7148 17.6597 21.7148H15.9532V20.0395C15.9532 19.3854 15.4006 18.8429 14.7342 18.8429ZM27.5086 24.5069H27.3461C26.6635 24.5069 26.1272 25.0493 26.1272 25.7035C26.1272 26.3736 26.6635 26.9001 27.3461 26.9001H27.5086C28.175 26.9001 28.7276 26.3736 28.7276 25.7035C28.7276 25.0493 28.175 24.5069 27.5086 24.5069ZM24.7295 19.0184H24.5669C23.8843 19.0184 23.348 19.5609 23.348 20.215C23.348 20.8851 23.8843 21.4116 24.5669 21.4116H24.7295C25.3958 21.4116 25.9484 20.8851 25.9484 20.215C25.9484 19.5609 25.3958 19.0184 24.7295 19.0184Z" fill="#52525D"/>
-          </svg>
-          <p>Jeux</p>
-        </a>
-      </li> %>
-      <li>
-        <%= link_to lists_path, class: (@current_page == 'listes' ? 'active' : '') do %>
-          <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M36 28.95C36 28.2048 35.3952 27.6 34.65 27.6H10.35C9.6048 27.6 9 28.2048 9 28.95C9 29.6952 9.6048 30.3 10.35 30.3H34.65C35.3952 30.3 36 29.6952 36 28.95ZM3.15 24C4.8888 24 6.3 25.4112 6.3 27.15C6.3 28.8888 4.8888 30.3 3.15 30.3C1.4112 30.3 0 28.8888 0 27.15C0 25.4112 1.4112 24 3.15 24ZM36 21.75C36 21.0048 35.3952 20.4 34.65 20.4H10.35C9.6048 20.4 9 21.0048 9 21.75C9 22.4952 9.6048 23.1 10.35 23.1H34.65C35.3952 23.1 36 22.4952 36 21.75ZM3.15 15C4.8888 15 6.3 16.4112 6.3 18.15C6.3 19.8888 4.8888 21.3 3.15 21.3C1.4112 21.3 0 19.8888 0 18.15C0 16.4112 1.4112 15 3.15 15ZM36 14.55C36 13.8048 35.3952 13.2 34.65 13.2H10.35C9.6048 13.2 9 13.8048 9 14.55C9 15.2952 9.6048 15.9 10.35 15.9H34.65C35.3952 15.9 36 15.2952 36 14.55ZM3.15 6C4.8888 6 6.3 7.4112 6.3 9.15C6.3 10.8888 4.8888 12.3 3.15 12.3C1.4112 12.3 0 10.8888 0 9.15C0 7.4112 1.4112 6 3.15 6ZM36 7.35C36 6.6048 35.3952 6 34.65 6H10.35C9.6048 6 9 6.6048 9 7.35C9 8.0952 9.6048 8.7 10.35 8.7H34.65C35.3952 8.7 36 8.0952 36 7.35Z" fill="#52525D"/>
-          </svg>
-          Listes
-        <% end %>
-      </li>
-      <li>
-        <%= link_to profil_path, class: (@current_page == 'profil' ? 'active' : '')  do %>
-          <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_3257_178)">
-              <path d="M28.5 10.5015C28.5 16.299 23.799 21.0015 18 21.0015C12.201 21.0015 7.5 16.299 7.5 10.5015C7.5 4.701 12.201 0 18 0C23.799 0 28.5 4.701 28.5 10.5015ZM26.103 21.2715C23.844 22.977 21.042 24.0015 18 24.0015C14.955 24.0015 12.1515 22.974 9.8895 21.2685C3.7815 23.958 0 32.3325 0 36H36C36 32.3655 32.1 23.991 26.103 21.2715Z" fill="#52525D"/>
-            </g>
-          </svg>
-          Profil
-        <% end %>
-      </li>
-      <li>
-        <%= link_to add_elements_path, class: (@current_page == 'add_elements' ? 'active' : '')  do %>
-          <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_3257_181)">
-              <path d="M17.9991 0C27.934 0 36 8.06602 36 18.0009C36 27.934 27.934 36 17.9991 36C8.06602 36 0 27.934 0 18.0009C0 8.06602 8.06602 0 17.9991 0ZM16.6542 16.6542H10.3526C9.6072 16.6542 9.00225 17.2591 9.00225 18.0045C9.00225 18.7499 9.6072 19.3548 10.3526 19.3548H16.6542V25.6564C16.6542 26.4018 17.2591 27.0068 18.0045 27.0068C18.7499 27.0068 19.3548 26.4018 19.3548 25.6564V19.3548H25.6564C26.4018 19.3548 27.0068 18.7499 27.0068 18.0045C27.0068 17.2591 26.4018 16.6542 25.6564 16.6542H19.3548V10.3526C19.3548 9.6072 18.7499 9.00225 18.0045 9.00225C17.2591 9.00225 16.6542 9.6072 16.6542 10.3526V16.6542Z" fill="#52525D"/>
-            </g>
-          </svg>
-          Ajouter
-        <% end %>
-      </li>
-    </ul>
-  </nav>
-  <div class="flex-btn-login">
-    <% if user_signed_in? %>
-      <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: { turbo_method: :delete}, class: "button button-login dark"%>
-    <% else %>
-      <%= link_to "Se connecter", new_user_session_path, class: "button button-login dark" %>
+  <div class="first-content-header">
+    <%= link_to(root_path, class: "logo-header") do %>
+      <%= image_tag "logo-beta.svg", alt: "", class: "home-index" %>
+      <p class="name-header">Omniscient <br>
+        Design</p>
     <% end %>
+    <div class="naviguation-header">
+      <nav class="nav-header">
+        <ul>
+          <li>
+            <%= link_to(root_path, class: (@current_page == 'accueil' ? 'active' : '')) do %>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_3256_104)">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M18 0C27.9345 0 36 8.0655 36 18C36 27.9345 27.9345 36 18 36C8.0655 36 0 27.9345 0 18C0 8.0655 8.0655 0 18 0ZM20.214 22.4325C21.696 21.825 22.8495 20.616 23.388 19.1085L27 9L16.992 12.5805C15.483 13.1205 14.2755 14.277 13.668 15.759L9.0705 27L20.214 22.4325ZM20.031 16.0035C20.8575 16.83 20.8575 18.1725 20.031 18.9975C19.2045 19.824 17.8635 19.824 17.037 18.9975C16.2105 18.1725 16.2105 16.83 17.037 16.0035C17.8635 15.177 19.2045 15.177 20.031 16.0035Z" fill="#52525D"/>
+                </g>
+              </svg>
+              Explorer
+            <% end %>
+          </li>
+          <li>
+            <%= link_to search_path, class: (@current_page == 'recherche' ? 'active' : '') do %>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M35.7135 32.469L26.406 23.1615C28.1565 20.754 29.1915 17.793 29.1915 14.595C29.1915 6.5475 22.644 0 14.595 0C6.5475 0 0 6.5475 0 14.595C0 22.644 6.5475 29.19 14.595 29.19C17.646 29.19 20.4795 28.2495 22.8255 26.643L32.1825 36L35.7135 32.469ZM4.281 14.595C4.281 8.907 8.9085 4.2795 14.5965 4.2795C20.2845 4.2795 24.912 8.907 24.912 14.595C24.912 20.283 20.2845 24.9105 14.5965 24.9105C8.907 24.9105 4.281 20.283 4.281 14.595Z" fill="#52525D"/>
+              </svg>
+              Rechercher
+            <% end %>
+          </li>
+          <%# <li class="disabled">
+            <a>
+              <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path opacity="0.4" d="M21.7222 9.42977V9.73291C20.9095 9.71695 20.0969 9.71695 19.2843 9.71695V9.44572C19.2843 8.34484 18.3579 7.45138 17.2527 7.45138H15.6438C13.8072 7.45138 12.312 5.98354 12.312 4.19661C12.312 3.54246 12.8646 3 13.5309 3C14.2135 3 14.7499 3.54246 14.7499 4.19661C14.7499 4.67525 15.1562 5.05816 15.6438 5.05816H17.2527C19.7069 5.07412 21.7059 7.03655 21.7222 9.42977Z" fill="#52525D"/>
+                <path d="M19.2849 9.7168C20.0975 9.7168 20.9101 9.7168 21.7228 9.73275C23.2667 9.73275 24.8107 9.76466 26.371 9.78062C32.0105 9.78062 36.1224 13.8012 36.1224 19.3535V26.4852C36.1224 32.0375 32.0105 36.0581 26.371 36.0581C24.1119 36.106 21.8528 36.1219 19.5775 36.1219C17.3021 36.1219 15.0105 36.106 12.7514 36.0581C7.11186 36.0581 3 32.0375 3 26.4852V19.3535C3 13.8012 7.11186 9.78062 12.7677 9.78062C14.8968 9.74871 17.0746 9.7168 19.2849 9.7168ZM14.7342 18.8429C14.0516 18.8429 13.5153 19.3854 13.5153 20.0395V21.7148H11.7926C11.1262 21.7148 10.5736 22.2572 10.5736 22.9114C10.5736 23.5815 11.1262 24.108 11.7926 24.108H13.5153V25.7992C13.5153 26.4533 14.0516 26.9958 14.7342 26.9958C15.4006 26.9958 15.9532 26.4533 15.9532 25.7992V24.108H17.6597C18.326 24.108 18.8786 23.5815 18.8786 22.9114C18.8786 22.2572 18.326 21.7148 17.6597 21.7148H15.9532V20.0395C15.9532 19.3854 15.4006 18.8429 14.7342 18.8429ZM27.5086 24.5069H27.3461C26.6635 24.5069 26.1272 25.0493 26.1272 25.7035C26.1272 26.3736 26.6635 26.9001 27.3461 26.9001H27.5086C28.175 26.9001 28.7276 26.3736 28.7276 25.7035C28.7276 25.0493 28.175 24.5069 27.5086 24.5069ZM24.7295 19.0184H24.5669C23.8843 19.0184 23.348 19.5609 23.348 20.215C23.348 20.8851 23.8843 21.4116 24.5669 21.4116H24.7295C25.3958 21.4116 25.9484 20.8851 25.9484 20.215C25.9484 19.5609 25.3958 19.0184 24.7295 19.0184Z" fill="#52525D"/>
+              </svg>
+              <p>Jeux</p>
+            </a>
+          </li> %>
+          <li>
+            <%= link_to lists_path, class: (@current_page == 'listes' ? 'active' : '') do %>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M36 28.95C36 28.2048 35.3952 27.6 34.65 27.6H10.35C9.6048 27.6 9 28.2048 9 28.95C9 29.6952 9.6048 30.3 10.35 30.3H34.65C35.3952 30.3 36 29.6952 36 28.95ZM3.15 24C4.8888 24 6.3 25.4112 6.3 27.15C6.3 28.8888 4.8888 30.3 3.15 30.3C1.4112 30.3 0 28.8888 0 27.15C0 25.4112 1.4112 24 3.15 24ZM36 21.75C36 21.0048 35.3952 20.4 34.65 20.4H10.35C9.6048 20.4 9 21.0048 9 21.75C9 22.4952 9.6048 23.1 10.35 23.1H34.65C35.3952 23.1 36 22.4952 36 21.75ZM3.15 15C4.8888 15 6.3 16.4112 6.3 18.15C6.3 19.8888 4.8888 21.3 3.15 21.3C1.4112 21.3 0 19.8888 0 18.15C0 16.4112 1.4112 15 3.15 15ZM36 14.55C36 13.8048 35.3952 13.2 34.65 13.2H10.35C9.6048 13.2 9 13.8048 9 14.55C9 15.2952 9.6048 15.9 10.35 15.9H34.65C35.3952 15.9 36 15.2952 36 14.55ZM3.15 6C4.8888 6 6.3 7.4112 6.3 9.15C6.3 10.8888 4.8888 12.3 3.15 12.3C1.4112 12.3 0 10.8888 0 9.15C0 7.4112 1.4112 6 3.15 6ZM36 7.35C36 6.6048 35.3952 6 34.65 6H10.35C9.6048 6 9 6.6048 9 7.35C9 8.0952 9.6048 8.7 10.35 8.7H34.65C35.3952 8.7 36 8.0952 36 7.35Z" fill="#52525D"/>
+              </svg>
+              Listes
+            <% end %>
+          </li>
+          <li>
+            <%= link_to profil_path, class: (@current_page == 'profil' ? 'active' : '')  do %>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_3257_178)">
+                  <path d="M28.5 10.5015C28.5 16.299 23.799 21.0015 18 21.0015C12.201 21.0015 7.5 16.299 7.5 10.5015C7.5 4.701 12.201 0 18 0C23.799 0 28.5 4.701 28.5 10.5015ZM26.103 21.2715C23.844 22.977 21.042 24.0015 18 24.0015C14.955 24.0015 12.1515 22.974 9.8895 21.2685C3.7815 23.958 0 32.3325 0 36H36C36 32.3655 32.1 23.991 26.103 21.2715Z" fill="#52525D"/>
+                </g>
+              </svg>
+              Profil
+            <% end %>
+          </li>
+          <li>
+            <%= link_to add_elements_path, class: (@current_page == 'add_elements' ? 'active' : '')  do %>
+              <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g clip-path="url(#clip0_3257_181)">
+                  <path d="M17.9991 0C27.934 0 36 8.06602 36 18.0009C36 27.934 27.934 36 17.9991 36C8.06602 36 0 27.934 0 18.0009C0 8.06602 8.06602 0 17.9991 0ZM16.6542 16.6542H10.3526C9.6072 16.6542 9.00225 17.2591 9.00225 18.0045C9.00225 18.7499 9.6072 19.3548 10.3526 19.3548H16.6542V25.6564C16.6542 26.4018 17.2591 27.0068 18.0045 27.0068C18.7499 27.0068 19.3548 26.4018 19.3548 25.6564V19.3548H25.6564C26.4018 19.3548 27.0068 18.7499 27.0068 18.0045C27.0068 17.2591 26.4018 16.6542 25.6564 16.6542H19.3548V10.3526C19.3548 9.6072 18.7499 9.00225 18.0045 9.00225C17.2591 9.00225 16.6542 9.6072 16.6542 10.3526V16.6542Z" fill="#52525D"/>
+                </g>
+              </svg>
+              Ajouter
+            <% end %>
+          </li>
+        </ul>
+      </nav>
+      <div class="flex-btn-login">
+        <% if user_signed_in? %>
+          <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, data: { turbo_method: :delete}, class: "button button-login dark"%>
+        <% else %>
+          <%= link_to "Se connecter", new_user_session_path, class: "button button-login dark" %>
+        <% end %>
+      </div>
+    </div>
   </div>
   <%# <div class="theme-switcher" style="margin-top: 16px;"> %>
   <%# <%= link_to 'Clair', set_theme_path(theme: 'light'), class: 'button dark' %>
