Référence height first container / Parrainage CSS filleul

--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -134,7 +134,7 @@
       <% end %>
     <%end%>
     <div class="info-card-first-content">
-      <%= link_to search_path(:tab => "frise") do %>
+          <%= link_to search_path(:tab => "frise", :start_year => oeuvre.date_oeuvre, :end_year => oeuvre.date_oeuvre) do %>
         <p class="info-card-dark info-header-show">
           <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_3261_191)">
@@ -159,7 +159,7 @@
       </p>
       <p class="title-card"><%= oeuvre.nom_oeuvre %></p>
       <div class="flex-info">
-        <%= link_to search_path(:tab => "frise") do %>
+        <%= link_to search_path(:tab => "frise", :start_year => oeuvre.date_oeuvre, :end_year => oeuvre.date_oeuvre) do %>
           <div class="info-card">
             <svg width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip0_3261_191)">
