--- a/app/assets/stylesheets/pages/_list.scss
+++ b/app/assets/stylesheets/pages/_list.scss
@@ -97,7 +97,7 @@
   justify-content: center;
   flex-direction: column;
   gap: 24px;
-  padding: 96px 0;
+  height: 45vh;
 }
 
 @media screen and (max-width: 375px) {
