--- a/app/assets/stylesheets/layout/_search.scss
+++ b/app/assets/stylesheets/layout/_search.scss
@@ -49,6 +49,19 @@
   color: $primary-color;
 }
 
+.suggestion-icon {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 4px;
+  margin-right: 24px;
+}
+
+.autocomplete-title {
+  margin-left: 5vw;
+  margin-top: 36px;
+}
+
 .autocomplete-hidden {
   display: none;
 }
